2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSPathUtilities.h: GSDefaultsRootForUser()
	function added.
	* Source/NSUser.m: Many alterations to do with correcting the
	file paths used to use GNUSTEP_USER_ROOT, and to get them to
	vary nicely when GSSetUserName() is called.  Added function
	GSDefaultsRootForUser() to get a defaults directory based on
	a new environment varibale, or use GNUSTEP_USER_ROOT.
	* Source/NSUserDefaults.m: Use GSDefaultsRootForUser()
	Fix a few bugs in setting up defaults database.
	Move defaults database to the Defaults subdirectory.
	* Source/Headers/GSIMpa.h: Fix error in last commit.

2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([stringByExpandingTildeInPath]) fix bug in
	handling ~username/... format.
	* Headers/Foundation/GSIMap.h: GSIMapCleanMap() rewrote to empty
	the map efficiently.  Added an option to refrain from calling it
	when emptying a map that doesn't need keys and values releasing.
	* Source/GSAttributedString.m: don't clean maps on emptying.
	* Source/GSFFCallInvocation.m: ditto
	* Source/NSArchiver.m: ditto
	* Source/NSConnection.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSPortCoder.m: ditto
	* Source/NSSerializer.m: ditto
	Changes inspired by Pierre-Tves Rivaille

2002-02-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: support for merging types and functions etc.
	* Tools/AGSIndex.m: ditto
	* Tools/AGSOutput.h: ditto
	* Tools/AGSOutput.m: ditto
	* Tools/autogsdoc.m: ditto
	Put stuff in place for merging info
	revert key-value coding changes.
	* Source/NSString.m: Fix bug in datausingEncoding:allowLossyConversion:
	pointed out by Stephen Brandon.

Mon Feb 11 15:11:31 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSString.m (NSImmutableString): Implemented copy,
	copyWithZone:, mutableCopy, mutableCopyWithZone:, so that the
	string can be copied, and the copy no longer tracks the parent.
